- Did some minor fixes to the ProgramList class
- Files and folders can be added to the exclude list
- Doesnt recursively check for obsolete software keys
- Added checks for files and folders before there added to the problem list
- Locks stream writer in logger so it cant be opened or written to at the same time
- Logger uses streamwriter as a base class
- Crash Reporter no longer saves reports to the hard disk before sending them
- RegEditGo uses SetForegroundWindow instead of ShowWindow to bring up regedit
- ActiveX scanner uses ole32.dll to get CLSID from program id and check icons

+ Version 1.3 Released

- Application info scanner uses program info class to collect data
- Application Info scanner and uninstall manager use program info to get slow info cache
- Added more checks for null or empty strings before checking for files/directories
- No longer throws an exception when the path is null/empty in FileExists and DirExists()
- Checks for value name + others before being added to bad registry key array
- Did some minor fixes to the ActiveX/COM scanner
- Changes to wait cursor when scanning
- Fixed bug causing duplicates in uninstall manager

+ Version 1.3.1 Released

- Calls ShowErrorMessage() instead of throwing an exception everytime in xmlRegistry
- Fixed bug causing the whole startup subkey to be stored and removed
- Displays if user is administrator and if process is being debugged in crashreporter
- Added Try-Catch blocks for System.Security.SecurityException in Fonts, HelpFiles and Sounds
- Cleaned up nested try-catch blocks in scanners
- Fixed the tab order in the dialogs
- Build Time uses MM/dd/yyyy format instead of ToShortDateString because of windows 7 new format
- Checks for update when dialog is shown instead of loaded
- Changed window settings for restore dialog and startup manager
- Directory settings are controlled through Settings.cs instead of Program.cs

+ Version 1.3.2 Released