@@ -5,3 +5,11 @@ C:\Users\Welcome\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\L
 C:\Users\Welcome\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common Tools.csproj.GenerateResource.Cache
 C:\Users\Welcome\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common Tools.dll
 C:\Users\Welcome\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common Tools.pdb
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\bin\Release\Common Tools.dll
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\bin\Release\Common Tools.pdb
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\ResolveAssemblyReference.cache
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common_Tools.DetailsRegView.resources
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common_Tools.Properties.Resources.resources
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common Tools.csproj.GenerateResource.Cache
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common Tools.dll
+C:\Users\Nick\Documents\Visual Studio 2008\Projects\Little Registry Cleaner\Little Registry Cleaner\Common Tools\obj\Release\Common Tools.pdb
