@@ -25,9 +25,6 @@
             <setting name="bOptionsRestore" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="strBuildTime" serializeAs="String">
-                <value />
-            </setting>
             <setting name="bOptionsAutoUpdate" serializeAs="String">
                 <value>True</value>
             </setting>
