@@ -22,17 +22,8 @@
             <setting name="bOptionsDelBackup" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="strOptionsBackupDir" serializeAs="String">
-                <value />
-            </setting>
             <setting name="bOptionsRestore" serializeAs="String">
                 <value>True</value>
-            </setting>
-            <setting name="strOptionsLogDir" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="strProgramSettingsDir" serializeAs="String">
-                <value />
             </setting>
             <setting name="strBuildTime" serializeAs="String">
                 <value />
