@@ -297,5 +297,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 - Checks for update when dialog is shown instead of loaded
 - Changed window settings for restore dialog and startup manager
 - Directory settings are controlled through Settings.cs instead of Program.cs
+- Build time is returned in Settings.cs instead of Program.cs
 
 + Version 1.3.2 Released
